Fix color + remove border right control icon on mobile device

--- a/css/responsive.less
+++ b/css/responsive.less
@@ -23,6 +23,8 @@
                         width: 50% !important;
                         text-align: center !important;
                         &:first-child{
+                            border: none;
+                            color: white !important;
                             position: absolute;
                             right:0;
                             bottom: -60px;
@@ -52,6 +54,8 @@
                         width: 100%;
                         border: none;
                         &:last-child{
+                            border: none;
+                            color: white !important;
                             position: absolute;
                             right:0;
                             bottom: -120px;
